--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -50,8 +50,8 @@ spec:
           mountPath: /etc/nginx
       initContainers:
       - name: setup
-        image:  gimpyb/passwordexchange-container-prod:0.0.1
-        command: ["sh", "-c", "aws configure set default.region us-west-2 && ls -lah /root/.aws/ && aws ssm get-parameters-by-path --path /mysite/dev/ --recursive --with-decryption --output text --query \"Parameters[].[Name,Value]\" | sed -E 's#/mysite/dev/([^[:space:]]*)[[:space:]](.*)#export \\1=\"\\2\"#' | sed -E 's/(export)([[:space:]].*=)/\\1\\U\\2/' > /var/www/html/.env && rsync -avzh /var/www/html/ /code && rsync -avzh /etc/nginx/ /nginx && rsync -avzh /usr/local/etc/php-fpm.d/ /php"]
+        image:  gimpyb/passwordexchange-container-prod:0.0.3
+        command: ["sh", "-c", "aws configure set default.region us-west-2 && ls -lah /root/.aws/ && aws ssm get-parameters-by-path --path /password.exchange/dev/ --recursive --with-decryption --output text --query \"Parameters[].[Name,Value]\" | sed -E 's#/password.exchange/dev/([^[:space:]]*)[[:space:]](.*)#export \\1=\"\\2\"#' | sed -E 's/(export)([[:space:]].*=)/\\1\\U\\2/' > /var/www/html/.env && rsync -azh /var/www/html/ /code  &&  rm /etc/nginx/conf.d/default.conf && rsync -azh /etc/nginx/ /nginx && rsync -azh /etc/custom-nginx/ /nginx && rsync -azh /usr/local/etc/php-fpm.d/ /php"]
         volumeMounts:
         - name: html
           mountPath: /code
