Made docker file smaller by copying from another image

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -9,15 +9,20 @@ COPY --chown=82 --from=gitclone /password-exchange/app/ /password-exchange
 WORKDIR /password-exchange/
 RUN composer install
 
+# FROM php:7.4-fpm-alpine as AWSInstaller
+# RUN apk update && apk add python3 python3-dev git build-base libffi-dev openssl-dev openssl nginx rsync sed py-pip
+# RUN python3 -m venv /opt/aws-cliv2/env --prompt aws-cliv2
+# RUN source /opt/aws-cliv2/env/bin/activate
+# RUN pip3 install git+https://github.com/boto/botocore.git@v2 --upgrade
+# RUN pip3 install git+https://github.com/aws/aws-cli.git@v2 --upgrade
+# RUN test ! -f /usr/local/bin/aws && ln -s /opt/aws-cliv2/env/bin/aws /usr/local/bin/aws
+# RUN test ! -f /usr/local/bin/aws_bash_completer && ln -s /opt/aws-cliv2/env/bin/aws_bash_complete
+FROM infrastructureascode/aws-cli as awscli
 FROM php:7.4-fpm-alpine
-RUN apk update && apk add python3 python3-dev git build-base libffi-dev openssl-dev openssl nginx rsync sed py-pip
-RUN python3 -m venv /opt/aws-cliv2/env --prompt aws-cliv2
-RUN source /opt/aws-cliv2/env/bin/activate
-RUN pip3 install git+https://github.com/boto/botocore.git@v2 --upgrade
-RUN pip3 install git+https://github.com/aws/aws-cli.git@v2 --upgrade
-RUN test ! -f /usr/local/bin/aws && ln -s /opt/aws-cliv2/env/bin/aws /usr/local/bin/aws
-RUN test ! -f /usr/local/bin/aws_bash_completer && ln -s /opt/aws-cliv2/env/bin/aws_bash_complete
+RUN apk add openssl-dev openssl
 RUN  openssl dhparam -out /etc/nginx/dhparam.pem 2048 
+
+COPY --from=awscli /usr/bin/aws /usr/local/bin/aws
 COPY --chown=82 --from=composerInstall /password-exchange/ /var/www/html
 RUN mkdir /root/.aws
 RUN git clone -b password.exchange https://github.com/Anthony-Bible/Nginx-config.git  /etc/custom-nginx
