--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -33,18 +33,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-        
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: Set up Docker Buildx
-        id: buildx
-        uses: docker/setup-buildx-action@v1
-        with:
-          install: true
-      
-      - name: Available platforms
-        run: echo ${{ steps.buildx.outputs.platforms }}        
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}    
       - name: Run tests
         run: |
           if [ -f docker-compose.test.yml ]; then
@@ -88,10 +77,13 @@ jobs:
 
       - name: Build image
         run: docker build . --file docker/Dockerfile --tag $IMAGE_NAME
-
-      - name: Log into registry
-        run: echo "${{ secrets.PAT }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
-
+      -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.PAT }}
       - name: Push image
         run: |
           IMAGE_ID=ghcr.io/${{ github.actor }}/$IMAGE_NAME
