--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -5,7 +5,7 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-  - package-ecosystem: "Docker"
+  - package-ecosystem: "docker"
     directory: "/docker"
     schedule:
       interval: "daily"
@@ -13,4 +13,3 @@ updates:
     directory: "/app"
     schedule:
       interval: "daily"
-      
