addes passwordexchangee prefix

--- a/kubernetes/secrets.encrypted.yaml
+++ b/kubernetes/secrets.encrypted.yaml
@@ -3,12 +3,12 @@ kind: ENC[AES256_GCM,data:2/DIMkKL,iv:ncgjNXVCd90Wg+qP2I47EuMBRpnXCWEI8m2MsEzsK/
 metadata:
     name: ENC[AES256_GCM,data:D0jRnwZ5tSH4dcc=,iv:6/lrqLfAJ3+GP1SyT3366UuR0YvEseSlfu1fE2e1W64=,tag:uWW8jiAKRTlGEC3aRinejw==,type:str]
 data:
-    AWS_SECRET_KEY_ID: ENC[AES256_GCM,data:eNiX8Ix7/8efoD/rYkTkRYY6bxIl/btd8ErDjQ==,iv:M2EgNSCCcgCW8WO7zV8pp1xiVrzb3AkJi+2o+xFKreU=,tag:9GpCb/NGgSqiHRW9tZ+2QA==,type:str]
-    AwS_SECRET_ACCESS_KEY: ENC[AES256_GCM,data:n8OlCkX4uxrlJ62JWuoG2B2GvRnc6dUR1hb772DIao3wMHhLjVmbH85SXyEPi442YSb3QJAnd8Zg8N3A,iv:JXS/OV7mY19AAFMyC4/+xiF39bOBHXJuieS0ORPQy14=,tag:fJ1iaLenOEFELX0l2Mlipg==,type:str]
-    PASSWORDEXCHANGEDBNAME: ENC[AES256_GCM,data:QgetR8+5I/o39XVlQ27HN6FCvc1FHOhV,iv:38e6bZuIpTOCA6afWQy9j4XAuytkipBxEGksq++tpmw=,tag:4ZWUOxygdTveD6YW2/e9Pg==,type:str]
-    PASSWORDEXCHANGEHOST: ENC[AES256_GCM,data:yoDHqwEhVmtqWDTO1sIQxJNy449VeuUoKO9EgZjopSh6W8644hqjKJuPvOeia7w6QhpV5y7aA3WrsabiiWS6vFB6j/75hyU4,iv:V1dGpOY37sLPI6WAATokFkveLwWtWt/FNX7TerCM15E=,tag:c0k/rUPE8fOW2tKkctj+Mg==,type:str]
-    PASSWORDEXCHANGEPASS: ENC[AES256_GCM,data:OwlTlpUBkHkdcULotsSRDgPGOOph9D+qI0sDIvEfB9g=,iv:WcXovW/Qigr8MpznW/2QnRug2fpglc5DiN02kU86x7I=,tag:mCmQVQkv94n34CZQQAKMDA==,type:str]
-    PASSWORDEXCHANGEUSER: ENC[AES256_GCM,data:PZ14098vn1hZ9Y5pJEz1iRCOIVfwu4WP,iv:NsxudNYoYEqv59ICRuwzJ+gBsz7EUIW0srPkV7zRUR0=,tag:9i6UDQfR6+9PK9Gw3cGXMQ==,type:str]
+    PASSWORDEXCHANGE_EMAILUSER: ENC[AES256_GCM,data:3rX1tbDm/5I+jTHDioiXTBNM9QWZXAfXQxiezw==,iv:zXHYsjjzkWow5L7e8HBX5K3cIWZJjrzenKGaeBVBFA4=,tag:+/vaLb1L4aVrQ3QQG0NOsw==,type:str]
+    PASSWORDEXCHANGE_EMAILPASS: ENC[AES256_GCM,data:7w6QHfWFzkQrSESWSXjUuoVwSu22ZTu3EtKxvQt2dKUpVdIltJMxGv7txbrEla7JT3sfgl0ceLTnpOJ3,iv:NlEk1yEO6Cd/LDrhQl/gtdU8lTr2peticIiWXDtQa1k=,tag:mhNfNZ2Zhdh2CKM6+gK4kA==,type:str]
+    PASSWORDEXCHANGE_DBNAME: ENC[AES256_GCM,data:f8EEL3qPNR6bB8Up1fKmiPsstlzvV5va,iv:zxbfiCP4np46P5Fy8Ww0TFdxbhXCTge8EjQsAwZSY8Q=,tag:QIrHunKqUTGl8DrWWddM6A==,type:str]
+    PASSWORDEXCHANGE_DBHOST: ENC[AES256_GCM,data:5RRnVEDPUUDT9cwsxHHmbOASdEkmTCOHSn1tmMTLoZSXj3hfiicj3PagkuGvYMpXPuPrZ0J5JoVrF2hP73RjD+5Y2hnjsxvg,iv:vPRMKVkCHbr5/TyD/mlj4bGiw+3e+GH7JGCLjbgoIf4=,tag:7OeHgS+Ql22s6ouHOLY6OQ==,type:str]
+    PASSWORDEXCHANGE_DBPASS: ENC[AES256_GCM,data:r5Un1aHzqLXGHhRv+p0hZq7ILNvo3WtlBvWqmG9PVL0=,iv:kPQTqPrvtu4v89HDLDJqrB62HCFOQuQzRyjs3wXswi0=,tag:b8+a98ciXkfjgJwaoGwJyg==,type:str]
+    PASSWORDEXCHANGE_DBUSER: ENC[AES256_GCM,data:e+f4750emIYqNMsMFeZYiMVm75FUOJRW,iv:i91MDOckU/lEDqo2pSVh1oJt92MHSE5wuqReQwY38G8=,tag:/mtqEanZoSYtN2rz2pS/GA==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-west-2:842805395457:key/e5e35884-80f1-4e88-801a-6210686a54a3
@@ -19,8 +19,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-05-26T13:01:31Z"
-    mac: ENC[AES256_GCM,data:fZ0asVwsfLZ7CSLRUeVTAfNSRaz94YjhCks9chHZqYNinbe+GmwBKiFukSc0Mctx8syHr38+jWVH8juqNNfMqG+xQcxLZdOsb1JuDeJWuEfvylH2NHHoFy+DESvfQaSwao+ET/ZujacK/gtkb9i8gYVVRzgbkVmjf4MEl0nSA2M=,iv:8P61vjSGUOcjTHfPI2YkZ6HfrXVeUpg7LZV0BcfUuB4=,tag:7K7aSIqITuTqMXW+IuXX3w==,type:str]
+    lastmodified: "2021-05-26T13:14:52Z"
+    mac: ENC[AES256_GCM,data:043i8iztv8PbNT55Si8tMzp5gzCXXbA8IX+3E7h4YOhjXoVarQFah/oAAqwNQqv2K1IEjzKN6dTdjNtHQ+Hj5p4mBK+lCQamSzMCwyyYGxLiDSarlEi9zYQ12lGfn5XQY0h4HODH9ZKpOsRIGQ3GlUz3TXJTGooCbzkgd0JZJ7U=,iv:Okesz+7C1+zxaEl3gptcWd7Em+JxnvGm9h5b0NSUseQ=,tag:6QOAbnhC4hQY8INMJbNT4g==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.1
