--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -40,7 +40,7 @@ jobs:
             docker-compose --file docker-compose.test.yml build
             docker-compose --file docker-compose.test.yml run sut
           else
-            docker build . --file docker/Dockerfile
+            docker build . --file Dockerfile
           fi
 
   # Push image to GitHub Packages.
@@ -65,7 +65,8 @@ jobs:
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
       - name: Build image
-        run: docker build . --file docker/Dockerfile --tag $IMAGE_NAME
+        run: docker build . --file Dockerfile --tag $IMAGE_NAME
+        
       -
         name: Login to GitHub Container Registry
         uses: docker/login-action@v1.9.0
