--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -49,10 +49,20 @@ spec:
           mountPath: /var/www/html
         - name: nginx-config
           mountPath: /etc/nginx
-      initContainers:
       - name: setup
-        image:  ghcr.io/anthony-bible/passwordexchange-container-prod@sha256:97b27ffa7183c2430adaa1758a5c3714a7208712afd2983c2f77f15da14da59d
-        command: ["sh", "-c", "aws configure set default.region us-west-2 && ls -lah /root/.aws/ && aws ssm get-parameters-by-path --path /password.exchange/dev/ --recursive --with-decryption --output text --query \"Parameters[].[Name,Value]\" | sed -E 's#/password.exchange/dev/([^[:space:]]*)[[:space:]](.*)#export \\1=\"\\2\"#' | sed -E 's/(export)([[:space:]].*=)/\\1\\U\\2/' > /var/www/html/.env && rsync -azh /var/www/html/ /code  &&  rm /etc/nginx/conf.d/default.conf && rsync -azh /etc/nginx/ /nginx && rsync -azh /etc/custom-nginx/ /nginx && rsync -azh /usr/local/etc/php-fpm.d/ /php"]
+        image:  ghcr.io/anthony-bible/passwordexchange-container-prod@sha256:43b51bea548badd91092af4e56b74ac8893e5ef103d6712164f81840e2c65ce7
+        env:
+          - name: PASSWORDEXCHANGE_EMAILUSER
+            valueFrom: 
+              secretKeyRef:
+                name: test-secret
+                key: PASSWORDEXCHANGE_EMAILUSER
+          - name: PASSWORDEXCHANGE_EMAILPASS
+            valueFrom: 
+              secretKeyRef:
+                name: test-secret
+                key: PASSWORDEXCHANGE_EMAILPASS
+              
         volumeMounts:
         - name: html
           mountPath: /code
