--- a/kubernetes/secrets.encrypted.yaml
+++ b/kubernetes/secrets.encrypted.yaml
@@ -3,12 +3,16 @@ kind: ENC[AES256_GCM,data:2/DIMkKL,iv:ncgjNXVCd90Wg+qP2I47EuMBRpnXCWEI8m2MsEzsK/
 metadata:
     name: ENC[AES256_GCM,data:D0jRnwZ5tSH4dcc=,iv:6/lrqLfAJ3+GP1SyT3366UuR0YvEseSlfu1fE2e1W64=,tag:uWW8jiAKRTlGEC3aRinejw==,type:str]
 data:
-    PASSWORDEXCHANGE_EMAILUSER: ENC[AES256_GCM,data:3rX1tbDm/5I+jTHDioiXTBNM9QWZXAfXQxiezw==,iv:zXHYsjjzkWow5L7e8HBX5K3cIWZJjrzenKGaeBVBFA4=,tag:+/vaLb1L4aVrQ3QQG0NOsw==,type:str]
-    PASSWORDEXCHANGE_EMAILPASS: ENC[AES256_GCM,data:7w6QHfWFzkQrSESWSXjUuoVwSu22ZTu3EtKxvQt2dKUpVdIltJMxGv7txbrEla7JT3sfgl0ceLTnpOJ3,iv:NlEk1yEO6Cd/LDrhQl/gtdU8lTr2peticIiWXDtQa1k=,tag:mhNfNZ2Zhdh2CKM6+gK4kA==,type:str]
-    PASSWORDEXCHANGE_DBNAME: ENC[AES256_GCM,data:f8EEL3qPNR6bB8Up1fKmiPsstlzvV5va,iv:zxbfiCP4np46P5Fy8Ww0TFdxbhXCTge8EjQsAwZSY8Q=,tag:QIrHunKqUTGl8DrWWddM6A==,type:str]
-    PASSWORDEXCHANGE_DBHOST: ENC[AES256_GCM,data:5RRnVEDPUUDT9cwsxHHmbOASdEkmTCOHSn1tmMTLoZSXj3hfiicj3PagkuGvYMpXPuPrZ0J5JoVrF2hP73RjD+5Y2hnjsxvg,iv:vPRMKVkCHbr5/TyD/mlj4bGiw+3e+GH7JGCLjbgoIf4=,tag:7OeHgS+Ql22s6ouHOLY6OQ==,type:str]
-    PASSWORDEXCHANGE_DBPASS: ENC[AES256_GCM,data:r5Un1aHzqLXGHhRv+p0hZq7ILNvo3WtlBvWqmG9PVL0=,iv:kPQTqPrvtu4v89HDLDJqrB62HCFOQuQzRyjs3wXswi0=,tag:b8+a98ciXkfjgJwaoGwJyg==,type:str]
-    PASSWORDEXCHANGE_DBUSER: ENC[AES256_GCM,data:e+f4750emIYqNMsMFeZYiMVm75FUOJRW,iv:i91MDOckU/lEDqo2pSVh1oJt92MHSE5wuqReQwY38G8=,tag:/mtqEanZoSYtN2rz2pS/GA==,type:str]
+    PASSWORDEXCHANGE_EMAILUSER: ENC[AES256_GCM,data:yUErl/tgQFFcuOuCxDzddjD8+6bxLYxOd1d8IQ==,iv:4XUpD314jitdDaNhCQHr78UsApJZEAKg3PVJpZwn2VU=,tag:GcE6fSNKnq15dxMvnImw1A==,type:str]
+    PASSWORDEXCHANGE_EMAILPASS: ENC[AES256_GCM,data:+sCF4pXIQ0DMRbbfCLh73um1MrlYYN/XJWvFSHhdZJ1tD5fNeR6z4zZ7GIHzKYhk8drdp+pgPk/qcY/6,iv:SxAdervl03qSselq0PCsVVpRS29RXGTTMtKFfRxbdVs=,tag:PsBjfy/egxsphFNeEBOizQ==,type:str]
+    PASSWORDEXCHANGE_EMAILHOST: ENC[AES256_GCM,data:blzJSGX3tu6xYckJAje4kFX0YTeIQJBaNqnNffMxjp/k425DdHybHz/BmZVIPrY5,iv:R+iZFDL7qVlyTitZuulr5+VjTcWgKxxG5oPvO2Eowr4=,tag:SEdfCgcKUkYsW7L5rwq3rQ==,type:str]
+    PASSWORDEXCHANGE_EMAILPORT: ENC[AES256_GCM,data:ZEkheQ==,iv:2FrLLqs1Ds9lYRI5Jnhs9VkUrguhX1heveIUxUOT2K8=,tag:88hGeL9uxHJS6YfNO/xpAw==,type:str]
+    PASSWORDEXCHANGE_HOST: ENC[AES256_GCM,data:YiPSaHOlMgoCL7Gc4rHTSpwpKOfufRhupzDDBv0RT7KIoWDi,iv:xPQ3R4YqnUbXzT2AN84eOr4x4BZFjsdBcT/eOZQaVpg=,tag:VEqocrc5gH9kdXI9jlzsbQ==,type:str]
+    PASSWORDEXCHANGE_DBNAME: ENC[AES256_GCM,data:EI/9PO6NX7Oa0Wts6VE/Ovk1A99CdSQA,iv:z6M7rt9nSPEctWjKULJQPyVxnhtDEEnpixuiyiTYWaE=,tag:seAbvPx8R3iLtzhJTpFeRg==,type:str]
+    PASSWORDEXCHANGE_DBHOST: ENC[AES256_GCM,data:Em+zte8ABlYSzYGKZs+RUuYQqqSOqYy+h7nElUiujqCNM7lrdCqUQyGm2CORQKM+ufyrz0PwXoqnO18omGFYmTDU7SI=,iv:cvExs3aDiGKlY9fD6Psk50sq4cnHe6a8Jp6j7CAERw4=,tag:btxmrCetn8GIS71Nsp+fPw==,type:str]
+    PASSWORDEXCHANGE_DBPASS: ENC[AES256_GCM,data:+YhW9y3O91tRHh+ZBDe+qKTz2RSa9jLOMOMOADSI9VM=,iv:w2UpcRwg/hjrntL+YuGpfrF/76xA0x4b1Y5gvJxHAt0=,tag:LWGjq90lBoPIjEEztB6zSg==,type:str]
+    PASSWORDEXCHANGE_DBUSER: ENC[AES256_GCM,data:4y7MhevCarQ0WCTa0kHt1f9Gxdp8LZE2,iv:wmf+y271APITWnzM0KXirhd1kS8l6bzp+lpdhO7BdtA=,tag:rOIng/HoyXTt2h/JSoxDVQ==,type:str]
+    PASSWORDEXCHANGE_DBPORT: ENC[AES256_GCM,data:+PXw7x78gdo=,iv:6JGXPgOYnTluAYci+sraD5XegretsFmR5vqqQQbwec0=,tag:m4kjgsly0PabF/6lsCKCaw==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-west-2:842805395457:key/e5e35884-80f1-4e88-801a-6210686a54a3
@@ -19,8 +23,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-05-26T13:14:52Z"
-    mac: ENC[AES256_GCM,data:043i8iztv8PbNT55Si8tMzp5gzCXXbA8IX+3E7h4YOhjXoVarQFah/oAAqwNQqv2K1IEjzKN6dTdjNtHQ+Hj5p4mBK+lCQamSzMCwyyYGxLiDSarlEi9zYQ12lGfn5XQY0h4HODH9ZKpOsRIGQ3GlUz3TXJTGooCbzkgd0JZJ7U=,iv:Okesz+7C1+zxaEl3gptcWd7Em+JxnvGm9h5b0NSUseQ=,tag:6QOAbnhC4hQY8INMJbNT4g==,type:str]
+    lastmodified: "2021-06-18T02:58:44Z"
+    mac: ENC[AES256_GCM,data:LZr0WEAiqt9vVRDBa0VfdON+98n4EkvmIuQbMc1iZ33I21JM+DvQkx7IWcqBd+4/WnXKrlgFco8WjPsJdul8ewj2J2CAmJQljyG1eITqeAdSpsxzuuwEh+iVjL96JO54Nmilj9hjAolXEvkEPw6UPQ0F7ZYy4Tl1GcLGmyilZZ8=,iv:rbSyPZYqAHUtF5OLHGtfoX2xO8y0K4g6hHFM7i6ZZVc=,tag:kTLFd0P0brR+b+aVG42xcw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.1
