--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: setup
-        image:  ghcr.io/anthony-bible/passwordexchange-container-prod@sha256:29b7798c1a85eda4157f1fd223e1670d351183c6bef0a9b854df68c51b8673cb
+        image:  ghcr.io/anthony-bible/passwordexchange-container-prod:0.0.7
         env:
           - name: PASSWORDEXCHANGE_EMAILUSER
             valueFrom: 
