--- a/kubernetes/secrets.encrypted.yaml
+++ b/kubernetes/secrets.encrypted.yaml
@@ -13,6 +13,8 @@ data:
     PASSWORDEXCHANGE_DBPASS: ENC[AES256_GCM,data:+YhW9y3O91tRHh+ZBDe+qKTz2RSa9jLOMOMOADSI9VM=,iv:w2UpcRwg/hjrntL+YuGpfrF/76xA0x4b1Y5gvJxHAt0=,tag:LWGjq90lBoPIjEEztB6zSg==,type:str]
     PASSWORDEXCHANGE_DBUSER: ENC[AES256_GCM,data:4y7MhevCarQ0WCTa0kHt1f9Gxdp8LZE2,iv:wmf+y271APITWnzM0KXirhd1kS8l6bzp+lpdhO7BdtA=,tag:rOIng/HoyXTt2h/JSoxDVQ==,type:str]
     PASSWORDEXCHANGE_DBPORT: ENC[AES256_GCM,data:+PXw7x78gdo=,iv:6JGXPgOYnTluAYci+sraD5XegretsFmR5vqqQQbwec0=,tag:m4kjgsly0PabF/6lsCKCaw==,type:str]
+    PASSWORDEXCHANGE_HCAPTCHA_SECRET: ENC[AES256_GCM,data:WDuygJkmvt361wIo/fIXZZ7cTJsFqCH5g92tZHDCz30h8h6btu1tze6s0TGAJpjkSJzi7PpM92o=,iv:96tOvQph6daiiVtnLDHAIzYdEXEDDbs4u3rA+JgHs7Y=,tag:Cx16BwZ0o1wdl4GxCeicng==,type:str]
+    PASSWORDEXCHANGE_HCAPTCHA_SITEKEY: ENC[AES256_GCM,data:efO/OZrpcapA9LGHHlxdAKoGJL72B1n3gqNwIXCd+HNKnfN6Ei/ZVnn4sEQn3Kim,iv:NmN0caFkOISrZ2RsLnOd1/9w+EhlPpFb/D9XbHgUoXQ=,tag:GmzcgFsqeVcWrA9UdLdmPQ==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-west-2:842805395457:key/e5e35884-80f1-4e88-801a-6210686a54a3
@@ -23,8 +25,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-06-18T02:58:44Z"
-    mac: ENC[AES256_GCM,data:LZr0WEAiqt9vVRDBa0VfdON+98n4EkvmIuQbMc1iZ33I21JM+DvQkx7IWcqBd+4/WnXKrlgFco8WjPsJdul8ewj2J2CAmJQljyG1eITqeAdSpsxzuuwEh+iVjL96JO54Nmilj9hjAolXEvkEPw6UPQ0F7ZYy4Tl1GcLGmyilZZ8=,iv:rbSyPZYqAHUtF5OLHGtfoX2xO8y0K4g6hHFM7i6ZZVc=,tag:kTLFd0P0brR+b+aVG42xcw==,type:str]
+    lastmodified: "2021-09-17T00:08:22Z"
+    mac: ENC[AES256_GCM,data:Lg/yui5CWiZN8SwfhTGgq9EBCymr2bPHI/4wfNTqfedn+24R4sUBMAeYfxyxO/5zuDLv0ugi4NcSPQguhVUwKAf40M4xzEX7uT3De/wmPfOexULzjIQn/pdXgj3Nm0ZR5CLbFtsc/xeJL1o+uWWlXMEhH88gSNqYlPfSr4qdzTg=,iv:iWK0RzSJRXfXKy097g4+Ck8RszFRpm6/SoUlEHoHOjw=,tag:2EfBltwDgHIz7ArbFPncYw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.1
