--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -27,7 +27,8 @@ jobs:
       COMPOSE_DOCKER_CLI_BUILD: 0
     runs-on: ubuntu-latest
    
-    steps: 
+    steps:
+      - uses: actions/checkout@v2
       - name: Run tests
         run: |
           if [ -f docker-compose.test.yml ]; then
