started creating slackbot

--- a/kubernetes/secrets.encrypted.yaml
+++ b/kubernetes/secrets.encrypted.yaml
@@ -13,7 +13,9 @@ data:
     PASSWORDEXCHANGE_DBPASS: ENC[AES256_GCM,data:+YhW9y3O91tRHh+ZBDe+qKTz2RSa9jLOMOMOADSI9VM=,iv:w2UpcRwg/hjrntL+YuGpfrF/76xA0x4b1Y5gvJxHAt0=,tag:LWGjq90lBoPIjEEztB6zSg==,type:str]
     PASSWORDEXCHANGE_DBUSER: ENC[AES256_GCM,data:4y7MhevCarQ0WCTa0kHt1f9Gxdp8LZE2,iv:wmf+y271APITWnzM0KXirhd1kS8l6bzp+lpdhO7BdtA=,tag:rOIng/HoyXTt2h/JSoxDVQ==,type:str]
     PASSWORDEXCHANGE_DBPORT: ENC[AES256_GCM,data:+PXw7x78gdo=,iv:6JGXPgOYnTluAYci+sraD5XegretsFmR5vqqQQbwec0=,tag:m4kjgsly0PabF/6lsCKCaw==,type:str]
-sops:
+    PASSWORDEXCHANGE_SLACKKEY: ENC[AES256_GCM,data:6D2yuuVRzjlq8VUebzpmTAwy8wH4KAnwp+DgF5KHKSs7k9solgu7fGTJGyJF+FOIx74yN+5mVbPeq4FuTx3yi4spT4UfgvwU4pBvJL1sgqcYyQKPBaTGxFIk5/ms+uMJ3OEuyCX2An4ACPDi+XGQMFMR2YSV0Nf/CBOyqd8k9+53lUcp,iv:Mm3OSa6aafVHBZmktxw6bh71rZnz1ObifM7aEGps/as=,tag:OVNEY2kxotgGj7XpPRh2PA==,type:str]
+    PASSWORDEXCHANGE_BOTKEY: ENC[AES256_GCM,data:cv7j+vALXOFVPfgjavnMir3U/GNtWNA3X17jIA952nQZa1afEpeEpH73gn09xma6B5uomjLAiy5LYWx9vU5oCY79mMiSKr6XkkBpMQ==,iv:IyDuuLGzd3ac9jPqIcQI6cc5HQ2ME7H3cNC2uscw/T0=,tag:ocG79uKVr0faO6ci33eEzg==,type:str]
+ops:
     kms:
         - arn: arn:aws:kms:us-west-2:842805395457:key/e5e35884-80f1-4e88-801a-6210686a54a3
           created_at: "2021-05-26T13:01:31Z"
@@ -23,8 +25,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-06-18T02:58:44Z"
-    mac: ENC[AES256_GCM,data:LZr0WEAiqt9vVRDBa0VfdON+98n4EkvmIuQbMc1iZ33I21JM+DvQkx7IWcqBd+4/WnXKrlgFco8WjPsJdul8ewj2J2CAmJQljyG1eITqeAdSpsxzuuwEh+iVjL96JO54Nmilj9hjAolXEvkEPw6UPQ0F7ZYy4Tl1GcLGmyilZZ8=,iv:rbSyPZYqAHUtF5OLHGtfoX2xO8y0K4g6hHFM7i6ZZVc=,tag:kTLFd0P0brR+b+aVG42xcw==,type:str]
+    lastmodified: "2021-10-29T23:27:37Z"
+    mac: ENC[AES256_GCM,data:PMl2Hyz4TeS83T5KuLLBgzs1k3+xHYVH4go4sCL9VoPTGtXkixAdAfmesVmIihw5kaQ43UGiKef3yAGNR6apZgpqoxJUHwaxRtuHcuE5ciPBw3gHu5jjSG2FU6q0OFmSUK1NM+81GOWZoz/kS9SrOt+55tYHqkDFgc6kN6wIjRI=,iv:maMt0sBXg3lBotFfabMlRfy/utjaArKdJ1GxOB+6KL8=,tag:c7Aw50MygQawV39OqGzgfw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.1
