--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -7,8 +7,13 @@ build:
   - image: ghcr.io/anthony-bible/passwordexchange-container-prod
     docker:
       dockerfile: Dockerfile
+  - image: ghcr.io/anthony-bible/slackbot-container-prod
+    context: slackbot
+    docker:
+      dockerfile: Dockerfile
 deploy:
   kubectl:
     manifests:
     - kubernetes/deployment.yaml
+    - slackbot/kubernetes/deployment.yaml
 
