--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
       - name: setup
-        image:  ghcr.io/anthony-bible/passwordexchange-container-prod:0.0.17
+        image:  ghcr.io/anthony-bible/passwordexchange-container-prod
         envFrom:
           - secretRef:
               name: test-secret
@@ -102,20 +102,3 @@ spec:
         emptyDir: {}        
       - name: php-config 
         emptyDir: {}
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: passwordexchange-service 
-  annotations:
-    # external-dns.alpha.kubernetes.io/hostname: anthony.bible
-  namespace: default
-spec:
-  selector:
-    app: passwordexchange 
-  ports:
-    - name: http
-      port: 80
-      targetPort: 8080
-      
----
