--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -5,8 +5,8 @@ metadata:
 build:
   artifacts:
   - image: ghcr.io/anthony-bible/passwordexchange-container-prod
-    docker:
-      dockerfile: Dockerfile
+    bazel:
+      target: //app:forms_image.tar
   - image: ghcr.io/anthony-bible/slackbot-container-prod
     context: slackbot
     docker:
