--- a/app/encryption/BUILD.bazel
+++ b/app/encryption/BUILD.bazel
@@ -1,6 +1,7 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
 load("@io_bazel_rules_docker//go:image.bzl", "go_image")
 load("@io_bazel_rules_docker//container:container.bzl", "container_image")
+load("@io_bazel_rules_docker//container:container.bzl", "container_push")
 
 go_library(
     name = "encryption_lib",
@@ -20,4 +21,12 @@ go_image(
     embed = [":encryption_lib"],
     visibility = ["//visibility:public"],
     pure = "on",
+)
+container_push(
+   name = "encryption_push",
+   image = ":encryption",
+   format = "Docker",
+   registry = "ghcr.io",
+   repository = "anthony-bible/encryption",
+   tag = "dev",
 )
