add encryption-service env variable

--- a/kubernetes/secrets.encrypted.yaml
+++ b/kubernetes/secrets.encrypted.yaml
@@ -7,6 +7,7 @@ data:
     PASSWORDEXCHANGE_EMAILPASS: ENC[AES256_GCM,data:+sCF4pXIQ0DMRbbfCLh73um1MrlYYN/XJWvFSHhdZJ1tD5fNeR6z4zZ7GIHzKYhk8drdp+pgPk/qcY/6,iv:SxAdervl03qSselq0PCsVVpRS29RXGTTMtKFfRxbdVs=,tag:PsBjfy/egxsphFNeEBOizQ==,type:str]
     PASSWORDEXCHANGE_EMAILHOST: ENC[AES256_GCM,data:DfT9g7PrGgLI2oSS1T1qCnSfIbt5hZ1nqpcmjyRm4Jz+BHh5/cd7+KBqttuBiRuu8uNPXA==,iv:fTaDREdlUbD7Z1UBjC9iqku28Yib4UTQJX6zT1BXGfM=,tag:qkZZYghbMgMZxWs403gfDA==,type:str]
     PASSWORDEXCHANGE_HOST: ENC[AES256_GCM,data:YiPSaHOlMgoCL7Gc4rHTSpwpKOfufRhupzDDBv0RT7KIoWDi,iv:xPQ3R4YqnUbXzT2AN84eOr4x4BZFjsdBcT/eOZQaVpg=,tag:VEqocrc5gH9kdXI9jlzsbQ==,type:str]
+    PASSWORDEXCHANGE_ENCRYPTIONSERVICE: ENC[AES256_GCM,data:gh5ceV+8fSTFK6yaBacxM6vJOcJa+X1LwDse6pa+j0U=,iv:xDZ0nDrE2dskkNRHYWShWSQ6ebtJ44AWjVkLNDpBiJY=,tag:Cj80eKE0OmWve9Qjp3nGhg==,type:str]
     PASSWORDEXCHANGE_DBNAME: ENC[AES256_GCM,data:EI/9PO6NX7Oa0Wts6VE/Ovk1A99CdSQA,iv:z6M7rt9nSPEctWjKULJQPyVxnhtDEEnpixuiyiTYWaE=,tag:seAbvPx8R3iLtzhJTpFeRg==,type:str]
     PASSWORDEXCHANGE_DBHOST: ENC[AES256_GCM,data:Em+zte8ABlYSzYGKZs+RUuYQqqSOqYy+h7nElUiujqCNM7lrdCqUQyGm2CORQKM+ufyrz0PwXoqnO18omGFYmTDU7SI=,iv:cvExs3aDiGKlY9fD6Psk50sq4cnHe6a8Jp6j7CAERw4=,tag:btxmrCetn8GIS71Nsp+fPw==,type:str]
     PASSWORDEXCHANGE_DBPASS: ENC[AES256_GCM,data:+YhW9y3O91tRHh+ZBDe+qKTz2RSa9jLOMOMOADSI9VM=,iv:w2UpcRwg/hjrntL+YuGpfrF/76xA0x4b1Y5gvJxHAt0=,tag:LWGjq90lBoPIjEEztB6zSg==,type:str]
@@ -24,8 +25,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2021-11-04T14:06:34Z"
-    mac: ENC[AES256_GCM,data:KKm+6vnzQhdntwsgHVAHmDL1CDVeyjiBQddUpL7M+dSqdb8uA99mddqgcBdv//UTzabS2iuPR77a1EtVe2DY2OFD8640+fX412mq85esuI3HJRoVQG7bsw12JxX8tndIST3s3+U38CUzcTHkbtARZ5nLlQww2G29KNQif1iNPJ8=,iv:qpX162g7NMlhIMoq5oCRNrjS6ygwbUFCjn9xBNIOLNU=,tag:JtvvXNessArveoikXqI9AA==,type:str]
+    lastmodified: "2022-02-28T03:39:46Z"
+    mac: ENC[AES256_GCM,data:2Ia2Tz39mmNx9QRlhDbPL2RTrXZshgi7iJ2tTthCfb/cuKnID2guqXqrwHXOZvTVCLgoMVovATnZROBESIfKhNBTnCAV03u5E7PqbBg9KUJsDZlfud9i1BZ2H0+aSwyNOCc5GTufviEzqJtTlMPHA7m8hq2CDQCnnMb20Z9Okjo=,iv:eqP2h0XdHtVY5VvvSUzdsyRX/moh7qhqdmJ8r2VVTQ0=,tag:oeTfJ1IqLeOK8l5etVu48A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.1
