--- a/kubernetes/secrets.encrypted.yaml
+++ b/kubernetes/secrets.encrypted.yaml
@@ -5,7 +5,8 @@ metadata:
 data:
     PASSWORDEXCHANGE_EMAILUSER: ENC[AES256_GCM,data:yUErl/tgQFFcuOuCxDzddjD8+6bxLYxOd1d8IQ==,iv:4XUpD314jitdDaNhCQHr78UsApJZEAKg3PVJpZwn2VU=,tag:GcE6fSNKnq15dxMvnImw1A==,type:str]
     PASSWORDEXCHANGE_EMAILPASS: ENC[AES256_GCM,data:+sCF4pXIQ0DMRbbfCLh73um1MrlYYN/XJWvFSHhdZJ1tD5fNeR6z4zZ7GIHzKYhk8drdp+pgPk/qcY/6,iv:SxAdervl03qSselq0PCsVVpRS29RXGTTMtKFfRxbdVs=,tag:PsBjfy/egxsphFNeEBOizQ==,type:str]
-    PASSWORDEXCHANGE_EMAILHOST: ENC[AES256_GCM,data:DfT9g7PrGgLI2oSS1T1qCnSfIbt5hZ1nqpcmjyRm4Jz+BHh5/cd7+KBqttuBiRuu8uNPXA==,iv:fTaDREdlUbD7Z1UBjC9iqku28Yib4UTQJX6zT1BXGfM=,tag:qkZZYghbMgMZxWs403gfDA==,type:str]
+    PASSWORDEXCHANGE_EMAILHOST: ENC[AES256_GCM,data:hQxijDV6mLE9norTJD2kax3YVCbLTABqi8GKWTHfRZ3L9aMluICHJr4HbIYk5njM,iv:ml/OAuG3RUwY1adFdjOnsKCT9gHNGv3xDkTjkWYwzeM=,tag:p1VEDE/0T3Mm5R0RvVPKqw==,type:str]
+    PASSWORDEXCHANGE_EMAILPORT: ENC[AES256_GCM,data:MGCLoA==,iv:dCHKeuZWdpXNCPohbG6M8NaETF9LSI84THM/rOGiv/g=,tag:GIpty/vJUAH2uC2XPhRetg==,type:str]
     PASSWORDEXCHANGE_HOST: ENC[AES256_GCM,data:YiPSaHOlMgoCL7Gc4rHTSpwpKOfufRhupzDDBv0RT7KIoWDi,iv:xPQ3R4YqnUbXzT2AN84eOr4x4BZFjsdBcT/eOZQaVpg=,tag:VEqocrc5gH9kdXI9jlzsbQ==,type:str]
     PASSWORDEXCHANGE_ENCRYPTIONSERVICE: ENC[AES256_GCM,data:TnM1F1QNaodDWQM7mIHcjc+CoR8mBkjw,iv:qhG+M+t02zMfcoJwBOxpQmqsASS1Z24+2O7hQF6L7Dw=,tag:YZXZPPW2O4bDYfVV8iMlQQ==,type:str]
     PASSWORDEXCHANGE_DBNAME: ENC[AES256_GCM,data:EI/9PO6NX7Oa0Wts6VE/Ovk1A99CdSQA,iv:z6M7rt9nSPEctWjKULJQPyVxnhtDEEnpixuiyiTYWaE=,tag:seAbvPx8R3iLtzhJTpFeRg==,type:str]
@@ -25,8 +26,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-02-28T04:13:39Z"
-    mac: ENC[AES256_GCM,data:8j6VNHsXUjoWvFj0cGJrq93GA02I9uUNgGe5vQZHE5+MF5N2eZ31Hu7nSgvodC14GZZez26iTADFq+MowagWrWIEF1knCr/Q0qtnPpOaK9co5apFCTYyam5+RfbcWV517bE05KqIJvAMyY1VJiSqGrAtO0BUaaOBxwye/VGkKeQ=,iv:xmXXvqJIhLDB3zm7gPYJ7yBO6jM7GxZK8nqT7K5smMs=,tag:1gU2tday+izl+YZsW364FQ==,type:str]
+    lastmodified: "2022-03-01T14:28:03Z"
+    mac: ENC[AES256_GCM,data:52QLLzsixLd3ZVLmzeP29NPJAiUSVpsMm0sYrry0duwlL5yv94KzM7R/JDsggORkSbChzdwegqSAtDXONruuwyIhkhK+umXEu9uxj3ZDMIkOKLpEpCpCrxu7o50O0m8kbCMdWE55pThXdPucniM5iRdyrhbhQnjGZaN9OCCgnZA=,iv:NMQBQaQq6NkzB6mYW3TjRkbKk6IybdL6sol0gwusbo4=,tag:W+yP4Ui2GbsJXpQrndqk9A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.1
