--- a/kubernetes/secrets.encrypted.yaml
+++ b/kubernetes/secrets.encrypted.yaml
@@ -9,6 +9,7 @@ data:
     PASSWORDEXCHANGE_EMAILPORT: ENC[AES256_GCM,data:MGCLoA==,iv:dCHKeuZWdpXNCPohbG6M8NaETF9LSI84THM/rOGiv/g=,tag:GIpty/vJUAH2uC2XPhRetg==,type:str]
     PASSWORDEXCHANGE_HOST: ENC[AES256_GCM,data:YiPSaHOlMgoCL7Gc4rHTSpwpKOfufRhupzDDBv0RT7KIoWDi,iv:xPQ3R4YqnUbXzT2AN84eOr4x4BZFjsdBcT/eOZQaVpg=,tag:VEqocrc5gH9kdXI9jlzsbQ==,type:str]
     PASSWORDEXCHANGE_ENCRYPTIONSERVICE: ENC[AES256_GCM,data:TnM1F1QNaodDWQM7mIHcjc+CoR8mBkjw,iv:qhG+M+t02zMfcoJwBOxpQmqsASS1Z24+2O7hQF6L7Dw=,tag:YZXZPPW2O4bDYfVV8iMlQQ==,type:str]
+    PASSWORDEXCHANGE_DATABASESERVICE: ENC[AES256_GCM,data:tkxHXglqr9SLzUV0jLDO4K8RkPGD3GUnL+J0pm99k+A=,iv:8dEgCpSsHMIPhgR9vp5Q723MW/v22EYaR+gw/Qfd4n8=,tag:mBx+swqnc/55J7Ox7lITyQ==,type:str]
     PASSWORDEXCHANGE_DBNAME: ENC[AES256_GCM,data:EI/9PO6NX7Oa0Wts6VE/Ovk1A99CdSQA,iv:z6M7rt9nSPEctWjKULJQPyVxnhtDEEnpixuiyiTYWaE=,tag:seAbvPx8R3iLtzhJTpFeRg==,type:str]
     PASSWORDEXCHANGE_DBHOST: ENC[AES256_GCM,data:Em+zte8ABlYSzYGKZs+RUuYQqqSOqYy+h7nElUiujqCNM7lrdCqUQyGm2CORQKM+ufyrz0PwXoqnO18omGFYmTDU7SI=,iv:cvExs3aDiGKlY9fD6Psk50sq4cnHe6a8Jp6j7CAERw4=,tag:btxmrCetn8GIS71Nsp+fPw==,type:str]
     PASSWORDEXCHANGE_DBPASS: ENC[AES256_GCM,data:+YhW9y3O91tRHh+ZBDe+qKTz2RSa9jLOMOMOADSI9VM=,iv:w2UpcRwg/hjrntL+YuGpfrF/76xA0x4b1Y5gvJxHAt0=,tag:LWGjq90lBoPIjEEztB6zSg==,type:str]
@@ -26,8 +27,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-03-01T14:28:03Z"
-    mac: ENC[AES256_GCM,data:52QLLzsixLd3ZVLmzeP29NPJAiUSVpsMm0sYrry0duwlL5yv94KzM7R/JDsggORkSbChzdwegqSAtDXONruuwyIhkhK+umXEu9uxj3ZDMIkOKLpEpCpCrxu7o50O0m8kbCMdWE55pThXdPucniM5iRdyrhbhQnjGZaN9OCCgnZA=,iv:NMQBQaQq6NkzB6mYW3TjRkbKk6IybdL6sol0gwusbo4=,tag:W+yP4Ui2GbsJXpQrndqk9A==,type:str]
+    lastmodified: "2022-03-03T13:19:29Z"
+    mac: ENC[AES256_GCM,data:6UqKBhp7fA0pwhGAXBbl7amoXSTC2MPdlFl9Qh8T678KzyLqKE7M353Al0iUEQw8XIdGboKFYsjGBQZNLrYXpPlcAcdkUFDrxK40kjgXqaGBWNvwFMO7iVR1xmx76ThigErb7kevE8fPVkk3YH78lVNZBSbneSOQnzM0jPLqQJ8=,iv:28QTAmd+56+7w/9KYd8Ctni62+nKLh02yBskCnyyFcs=,tag:ka3ILNV63PLr0j9IOhJcaw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.1
