don't commit .venv

--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,4 @@ bazel-password.exchange
 # Entries below this point are managed by Please (DO NOT EDIT)
 plz-out
 .plzconfig.local
-slacbot/.venv
+slackbot/.venv/*
