--- a/kubernetes/secrets.encrypted.yaml
+++ b/kubernetes/secrets.encrypted.yaml
@@ -17,6 +17,8 @@ data:
     PASSWORDEXCHANGE_DBPORT: ENC[AES256_GCM,data:+PXw7x78gdo=,iv:6JGXPgOYnTluAYci+sraD5XegretsFmR5vqqQQbwec0=,tag:m4kjgsly0PabF/6lsCKCaw==,type:str]
     PASSWORDEXCHANGE_HCAPTCHA_SECRET: ENC[AES256_GCM,data:WDuygJkmvt361wIo/fIXZZ7cTJsFqCH5g92tZHDCz30h8h6btu1tze6s0TGAJpjkSJzi7PpM92o=,iv:96tOvQph6daiiVtnLDHAIzYdEXEDDbs4u3rA+JgHs7Y=,tag:Cx16BwZ0o1wdl4GxCeicng==,type:str]
     PASSWORDEXCHANGE_HCAPTCHA_SITEKEY: ENC[AES256_GCM,data:efO/OZrpcapA9LGHHlxdAKoGJL72B1n3gqNwIXCd+HNKnfN6Ei/ZVnn4sEQn3Kim,iv:NmN0caFkOISrZ2RsLnOd1/9w+EhlPpFb/D9XbHgUoXQ=,tag:GmzcgFsqeVcWrA9UdLdmPQ==,type:str]
+    DELETEMESSAGES_PASS: ENC[AES256_GCM,data:AaWmz7ZrdgNMs765e3G/V4E7LXyeTubu,iv:XzCLEMPInrpfxkaRyWYLQqkmwGS78xjh45HmQSS42IY=,tag:3hWr/0QbY2ISrMt2RbbVKA==,type:str]
+    DELETEMESSAGES_USER: ENC[AES256_GCM,data:ZsMaMmidGdzClXI+6YpL5Ttn+cI=,iv:u20k7MaNqDxAz2r0dBaYyfHP0oX3rmDcIHw6Llk+axQ=,tag:/ebDMpMYzh6hB5XQhUHMyg==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-west-2:842805395457:key/e5e35884-80f1-4e88-801a-6210686a54a3
@@ -27,8 +29,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-03-03T13:19:29Z"
-    mac: ENC[AES256_GCM,data:6UqKBhp7fA0pwhGAXBbl7amoXSTC2MPdlFl9Qh8T678KzyLqKE7M353Al0iUEQw8XIdGboKFYsjGBQZNLrYXpPlcAcdkUFDrxK40kjgXqaGBWNvwFMO7iVR1xmx76ThigErb7kevE8fPVkk3YH78lVNZBSbneSOQnzM0jPLqQJ8=,iv:28QTAmd+56+7w/9KYd8Ctni62+nKLh02yBskCnyyFcs=,tag:ka3ILNV63PLr0j9IOhJcaw==,type:str]
+    lastmodified: "2022-03-10T14:28:39Z"
+    mac: ENC[AES256_GCM,data:sYTwerbBLXxEliHpX4LPA4he7YJj7EFyRR+3lKGkPr5x6oI/NgSnwt2KKoD5A4YOx0OqmuGAGIBHapXSnsFc0dy+LtAIIxA0SRYmGSQWNN/sw/8Hl9ECXp2avQAVUxJUS8ua/XngtKmo1GaRrF1z+amuI6XOJrK6H2hiNnsrE/k=,iv:JxI2P78Y9wrhW+/BjCx8/xtEZaXfbe06U5f2eAf0ENo=,tag:Qo59mBm5ktY5cJxZr9s7dQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.1
